--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "react-ui-kit",
+  "name": "@yulianto/react-ui-kit",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./lib/cjs/index.js",
+  "module": "./lib/esm/index.js",
+  "types": "./lib/esm/index.d.ts",
   "author": "Yulianto Saparudin <yulianto.saparudin@gmail.com>",
   "license": "MIT",
   "scripts": {
@@ -19,5 +21,8 @@
   "peerDependencies": {
     "react": "*",
     "react-dom": "*"
-  }
+  },
+  "files": [
+    "/lib"
+  ]
 }
